--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -8,5 +8,9 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-yew = "0.17"
+anyhow = "1.0.34"
 wasm-bindgen = "0.2"
+serde = "1.0"
+serde_json = "1.0"
+yew = "0.17"
+yew-router = "0.14"
