--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Sanpi <sanpi@homecomputing.fr>"]
 edition = "2018"
 
 [dependencies]
+actix-cors = "0.5"
 actix-web = "3.2"
 dotenv = "0.15"
 env_logger = "0.8"
