--- a/front/package.json
+++ b/front/package.json
@@ -1,6 +1,7 @@
 {
     "name": "oxfeed",
     "dependencies": {
-        "bootstrap": "^4.0"
+        "bootstrap": "^4.0",
+        "jquery": "^3.5"
     }
 }
