--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -9,8 +9,9 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = "1.0.34"
-wasm-bindgen = "0.2"
 serde = "1.0"
 serde_json = "1.0"
+wasm-bindgen = "0.2"
+web-sys = "0.3.45"
 yew = "0.17"
 yew-router = "0.14"
