--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -8,10 +8,12 @@ edition = "2018"
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-anyhow = "1.0.34"
+anyhow = "1.0"
+log = "0.4"
 serde = "1.0"
 serde_json = "1.0"
 wasm-bindgen = "0.2"
-web-sys = "0.3.45"
+wasm-logger = "0.2"
+web-sys = "0.3"
 yew = "0.17"
 yew-router = "0.14"
