--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -9,6 +9,7 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 anyhow = "1.0"
+chrono-humanize = "0.1"
 log = "0.4"
 serde = "1.0"
 serde_json = "1.0"
@@ -17,3 +18,7 @@ wasm-logger = "0.2"
 web-sys = "0.3"
 yew = "0.17"
 yew-router = "0.14"
+
+[dependencies.chrono]
+version = "0.4"
+features = ["serde", "wasmbind"]
