--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,8 +7,11 @@ edition = "2018"
 [dependencies]
 actix-cors = "0.5"
 actix-web = "3.2"
+attohttpc = "0.16"
 dotenv = "0.15"
 env_logger = "0.8"
+feed-rs = "0.4"
+scraper = "0.12"
 serde = "1.0"
 serde_json = "1.0"
 
