--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ elephantry = "1.1"
 env_logger = "0.8"
 feed-rs = "0.4"
 log = "0.4"
+scraper = "0.12.0"
 single-instance = "0.1"
 
 [dependencies.oxfeed-api]
