--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 actix-cors = "0.5"
 actix-web = "3.2"
 attohttpc = "0.16"
+bigdecimal = "0.2.0"
 dotenv = "0.15"
 env_logger = "0.8"
 feed-rs = "0.4"
@@ -21,7 +22,7 @@ features = ["serde"]
 
 [dependencies.elephantry]
 version = "1.1"
-features = ["date", "uuid"]
+features = ["date", "numeric", "uuid"]
 
 [dependencies.uuid]
 version = "0.8"
