--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 anyhow = "1.0"
 chrono-humanize = "0.1"
+http = "0.2.1"
 log = "0.4"
 serde = "1.0"
 serde_json = "1.0"
