--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -14,6 +14,7 @@ http = "0.2.1"
 log = "0.4"
 serde = "1.0"
 serde_json = "1.0"
+ring = "0.17.0-alpha.7"
 wasm-bindgen = "0.2"
 wasm-logger = "0.2"
 web-sys = "0.3"
