--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,6 +12,7 @@ bigdecimal = "0.2.0"
 dotenv = "0.15"
 env_logger = "0.8"
 feed-rs = "0.4"
+opml = "0.3"
 scraper = "0.12"
 serde = "1.0"
 serde_json = "1.0"
