--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,15 +8,17 @@ edition = "2018"
 actix-cors = "0.5"
 actix-web = "3.2"
 attohttpc = "0.16"
-bigdecimal = "0.2.0"
+bigdecimal = "0.2"
 dotenv = "0.15"
 env_logger = "0.8"
 feed-rs = "0.4"
 log = "0.4"
 opml = "0.3"
+ring = "0.17.0-alpha.7"
 scraper = "0.12"
 serde = "1.0"
 serde_json = "1.0"
+tree_magic = "0.2"
 
 [dependencies.chrono]
 version = "0.4"
