--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4"
 serde = "1.0"
 serde_json = "1.0"
 ring = "0.17.0-alpha.7"
+urlencoding = "1.1"
 wasm-bindgen = "0.2"
 wasm-logger = "0.2"
 web-sys = "0.3"
