--- a/front/package.json
+++ b/front/package.json
@@ -2,7 +2,6 @@
     "name": "oxfeed",
     "dependencies": {
         "bootstrap": "^4.0",
-        "bootstrap-icons": "^1.1",
-        "jquery": "^3.5"
+        "bootstrap-icons": "^1.1"
     }
 }
