--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -12,9 +12,10 @@ anyhow = "1.0"
 chrono-humanize = "0.1"
 http = "0.2.1"
 log = "0.4"
+ring = "0.17.0-alpha.7"
 serde = "1.0"
 serde_json = "1.0"
-ring = "0.17.0-alpha.7"
+thiserror = "1.0"
 urlencoding = "1.1"
 wasm-bindgen = "0.2"
 wasm-logger = "0.2"
