--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,12 +12,16 @@ bigdecimal = "0.2"
 dotenv = "0.15"
 env_logger = "0.8"
 feed-rs = "0.4"
+futures-util = "0.3"
+hmac = "0.9"
+jwt = "0.11"
 log = "0.4"
 opml = "0.3"
 ring = "0.17.0-alpha.7"
 scraper = "0.12"
 serde = "1.0"
 serde_json = "1.0"
+sha2 = "0.9"
 tree_magic = "0.2"
 
 [dependencies.chrono]
