--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -10,19 +10,25 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 anyhow = "1.0"
 chrono-humanize = "0.1"
-http = "0.2.1"
+hmac = "0.9"
+http = "0.2"
+jwt = "0.11"
 log = "0.4"
 ring = "0.17.0-alpha.7"
 serde = "1.0"
 serde_json = "1.0"
+sha2 = "0.9"
 thiserror = "1.0"
 urlencoding = "1.1"
 wasm-bindgen = "0.2"
 wasm-logger = "0.2"
-web-sys = "0.3"
 yew = "0.17"
 yew-router = "0.14"
 
 [dependencies.chrono]
 version = "0.4"
 features = ["serde", "wasmbind"]
+
+[dependencies.web-sys]
+version = "0.3"
+features = ["HtmlDocument"]
