--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -21,6 +21,7 @@ sha2 = "0.9"
 thiserror = "1.0"
 urlencoding = "1.1"
 wasm-bindgen = "0.2"
+wasm-cookies = "0.1"
 wasm-logger = "0.2"
 yew = "0.17"
 yew-router = "0.14"
