--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -14,7 +14,8 @@ log = "0.4"
 rayon = "1.5"
 scraper = "0.12"
 single-instance = "0.1"
-thiserror = "1.0.22"
+structopt = "0.3"
+thiserror = "1.0"
 
 [dependencies.oxfeed-api]
 version = "0.1"
