--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -5,8 +5,10 @@ authors = ["Sanpi <sanpi@homecomputing.fr>"]
 edition = "2018"
 
 [dependencies]
+actix = "0.10.0"
 actix-cors = "0.5"
 actix-web = "3.2"
+actix-web-actors = "3.0"
 attohttpc = "0.16"
 bigdecimal = "0.2"
 dotenv = "0.15"
