Creates common create to share entities

--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -20,6 +20,7 @@ serde_json = "1.0"
 sha2 = "0.9"
 thiserror = "1.0"
 urlencoding = "1.1"
+uuid = "0.8.1"
 wasm-bindgen = "0.2"
 wasm-cookies = "0.1"
 wasm-logger = "0.2"
@@ -29,6 +30,10 @@ yew-router = "0.14"
 [dependencies.chrono]
 version = "0.4"
 features = ["serde", "wasmbind"]
+
+[dependencies.oxfeed-common]
+version = "0.1"
+path = "../common/"
 
 [dependencies.web-sys]
 version = "0.3"
