--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -30,6 +30,11 @@ tree_magic = "0.2"
 version = "0.4"
 features = ["serde"]
 
+[dependencies.oxfeed-common]
+version = "0.1"
+path = "../common/"
+features = ["back"]
+
 [dependencies.elephantry]
 version = "1.3"
 features = ["date", "numeric", "uuid", "serde-support"]
