--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -18,6 +18,7 @@ structopt = "0.3"
 thiserror = "1.0"
 uuid = "0.8"
 
-[dependencies.oxfeed-api]
+[dependencies.oxfeed-common]
 version = "0.1"
-path = "../api"
+path = "../common"
+features = ["back"]
