Unique icon URL

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -10,6 +10,7 @@ actix-cors = "0.5"
 actix-web = "3.2"
 actix-web-actors = "3.0"
 attohttpc = "0.16"
+base64 = "0.13.0"
 bigdecimal = "0.2"
 dotenv = "0.15"
 env_logger = "0.8"
