--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,8 +5,23 @@ authors = ["Sanpi <sanpi@homecomputing.fr>"]
 edition = "2018"
 
 [dependencies]
-anyhow = "1.0.34"
-serde_json = "1.0.60"
+anyhow = "1.0"
+http = "0.2"
+jwt = "0.11"
+serde_json = "1.0"
+thiserror = "1.0"
+
+[dependencies.actix-web]
+version = "3.3"
+optional = true
+
+[dependencies.attohttpc]
+version = "0.16"
+optional = true
+
+[dependencies.base64]
+version = "0.13"
+optional = true
 
 [dependencies.chrono]
 version = "0.4"
@@ -16,6 +31,10 @@ features = ["serde"]
 version = "1.3"
 optional = true
 features = ["date", "uuid"]
+
+[dependencies.feed-rs]
+version = "0.4"
+optional = true
 
 [dependencies.serde]
 version = "1.0"
@@ -27,4 +46,4 @@ features = ["serde"]
 
 [features]
 default = []
-back = ["elephantry"]
+back = ["actix-web", "attohttpc", "base64", "feed-rs", "elephantry"]
