--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -5,7 +5,6 @@ authors = ["Sanpi <sanpi@homecomputing.fr>"]
 edition = "2018"
 
 [dependencies]
-attohttpc = "0.16"
 dotenv = "0.15"
 elephantry = "1.3"
 env_logger = "0.8"
@@ -18,6 +17,10 @@ structopt = "0.3"
 thiserror = "1.0"
 url = "2.2"
 uuid = "0.8"
+
+[dependencies.attohttpc]
+version = "0.16"
+features = ["json"]
 
 [dependencies.oxfeed-common]
 version = "0.1"
