--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -30,7 +30,7 @@ features = ["serde"]
 [dependencies.elephantry]
 version = "1.3"
 optional = true
-features = ["date", "json", "uuid"]
+features = ["date", "uuid"]
 
 [dependencies.feed-rs]
 version = "0.4"
