--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,5 @@ DATABASE_URL=postgres://localhost/oxfeed
 SECRET=secret
 API_URL=http://127.0.0.1:8000
 RUST_LOG=debug
+LOCK_FILE=lock
+UPDATE_INTERVAL=20
