--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,7 +9,6 @@ actix = "0.10"
 actix-cors = "0.5"
 actix-web = "3.2"
 actix-web-actors = "3.0"
-attohttpc = "0.16"
 base64 = "0.13"
 bigdecimal = "0.2"
 dotenv = "0.15"
@@ -20,12 +19,19 @@ hmac = "0.9"
 jwt = "0.12"
 log = "0.4"
 opml = "0.3"
+rayon = "1.5"
 ring = "0.17.0-alpha.7"
 scraper = "0.12"
+single-instance = "0.1"
 serde = "1.0"
 serde_json = "1.0"
 sha2 = "0.9"
 tree_magic = "0.2"
+url = "2.2"
+
+[dependencies.attohttpc]
+version = "0.16"
+features = ["json"]
 
 [dependencies.chrono]
 version = "0.4"
@@ -37,7 +43,7 @@ path = "../common/"
 features = ["back"]
 
 [dependencies.elephantry]
-version = "1.4"
+version = "1.5"
 features = ["date", "numeric", "uuid", "serde-support"]
 
 [dependencies.uuid]
