--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -36,6 +36,10 @@ features = ["date", "uuid"]
 version = "0.5"
 optional = true
 
+[dependencies.log]
+version = "0.4"
+optional = true
+
 [dependencies.serde]
 version = "1.0"
 features = ["derive"]
@@ -46,4 +50,4 @@ features = ["serde"]
 
 [features]
 default = []
-back = ["actix-web", "attohttpc", "base64", "feed-rs", "elephantry"]
+back = ["actix-web", "attohttpc", "base64", "log", "feed-rs", "elephantry"]
