--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -43,8 +43,8 @@ path = "../common/"
 features = ["back"]
 
 [dependencies.elephantry]
-version = "1.5"
-features = ["date", "numeric", "uuid", "serde-support"]
+version = "2.0"
+features = ["date", "numeric", "uuid", "serde"]
 
 [dependencies.uuid]
 version = "0.8"
