--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -40,6 +40,10 @@ optional = true
 version = "0.4"
 optional = true
 
+[dependencies.opml]
+version = "1.0"
+optional = true
+
 [dependencies.serde]
 version = "1.0"
 features = ["derive"]
@@ -50,4 +54,4 @@ features = ["serde"]
 
 [features]
 default = []
-back = ["actix-web", "attohttpc", "base64", "log", "feed-rs", "elephantry"]
+back = ["actix-web", "attohttpc", "base64", "log", "feed-rs", "elephantry", "opml"]
