--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -17,6 +17,7 @@ ring = "0.17.0-alpha.7"
 serde = "1.0"
 serde_json = "1.0"
 sha2 = "0.9"
+syn = "=1.0.65"
 urlencoding = "1.1"
 uuid = "0.8"
 wasm-bindgen = "0.2"
