--- a/front/package.json
+++ b/front/package.json
@@ -2,6 +2,7 @@
     "name": "oxfeed",
     "dependencies": {
         "bootstrap": "^4.0",
-        "bootstrap-icons": "^1.1"
+        "bootstrap-icons": "^1.1",
+        "jquery": "^3.6"
     }
 }
