--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -3,6 +3,7 @@ name = "oxfeed-api"
 version = "0.1.0"
 authors = ["Sanpi <sanpi@homecomputing.fr>"]
 edition = "2018"
+license = "MIT"
 
 [dependencies]
 actix = "0.10"
