--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -3,6 +3,7 @@ name = "oxfeed-front"
 version = "0.1.0"
 authors = ["Sanpi <sanpi@homecomputing.fr>"]
 edition = "2018"
+license = "MIT"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
