Uses trunk instead of wasm-pack

--- a/.env.dist
+++ b/.env.dist
@@ -4,6 +4,6 @@ CACHE_DIR=./cache
 DATABASE_URL=postgres://localhost/oxfeed
 SECRET=secret
 API_URL=http://127.0.0.1:8000
-RUST_LOG=debug
+RUST_LOG=debug,wasm_bindgen_wasm_interpreter=info,walrus=info,wasm_bindgen_cli_support=info
 LOCK_FILE=lock
 UPDATE_INTERVAL=20
