--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,5 @@ cache
 /.env
 *.lock
 target
-/front/static/index.html
+/front/dist
 /front/static/lib
-/front/static/package.json
-/front/static/oxfeed_front*
