--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -45,6 +45,10 @@ optional = true
 version = "1.0"
 optional = true
 
+[dependencies.reqwest]
+version = "0.11"
+optional = true
+
 [dependencies.serde]
 version = "1.0"
 features = ["derive"]
@@ -56,3 +60,4 @@ features = ["serde"]
 [features]
 default = []
 back = ["actix-web", "attohttpc", "base64", "log", "feed-rs", "elephantry", "opml"]
+front = ["reqwest"]
