--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -7,6 +7,8 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0"
+futures = "0.3"
+gloo = "0.6"
 hmac = "0.12"
 http = "0.2"
 jwt = "0.16"
@@ -21,11 +23,13 @@ uuid = "0.8"
 wasm-bindgen = "0.2"
 wasm-cookies = "0.1"
 wasm-logger = "0.2"
-yew = "0.18"
-yew-router = "0.15"
+wasm-sockets = "0.2"
+yew = "0.19"
+yew-agent = "0.1"
+yew-router = "0.16"
 
 [dependencies.elephantry-extras]
-version = "0.2"
+version = "0.3"
 features = ["yew-pager"]
 
 [dependencies.chrono-humanize]
@@ -44,10 +48,6 @@ features = ["json"]
 [dependencies.web-sys]
 version = "0.3"
 features = ["HtmlDocument", "Performance"]
-
-[dependencies.yewtil]
-version = "0.4"
-features = ["future"]
 
 [build-dependencies]
 dotenv = "0.15"
