--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -12,7 +12,6 @@ gloo = "0.8"
 hmac = "0.12"
 http = "0.2"
 jwt = "0.16"
-log = "0.4"
 regex = "1.4"
 ring = "0.17.0-alpha.7"
 serde = "1.0"
@@ -24,17 +23,20 @@ wasm-bindgen = "0.2"
 wasm-cookies = "0.1"
 wasm-logger = "0.2"
 wasm-sockets = "0.2"
-yew = "0.19"
-yew-agent = "0.1"
-yew-router = "0.16"
+yew-agent = "0.2"
+yew-router = "0.17"
 
 [dependencies.elephantry-extras]
-version = "0.3"
+version = "0.4"
 features = ["yew-pager"]
 
 [dependencies.chrono-humanize]
 version = "0.2"
 features = ["wasmbind"]
+
+[dependencies.log]
+version = "0.4"
+features = ["serde"]
 
 [dependencies.oxfeed-common]
 version = "0.1"
@@ -48,6 +50,10 @@ features = ["json"]
 [dependencies.web-sys]
 version = "0.3"
 features = ["HtmlDocument", "Performance"]
+
+[dependencies.yew]
+version = "0.20"
+features = ["csr"]
 
 [build-dependencies]
 dotenv = "0.15"
