--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,50 +6,47 @@ edition = "2021"
 license = "MIT"
 
 [dependencies]
-http = "0.2"
-jwt = "0.16"
-serde_json = "1.0"
+chrono.workspace = true
+http.workspace = true
+jwt.workspace = true
+serde_json.workspace = true
 thiserror = "1.0"
 
 [dependencies.actix-web]
-version = "4.0"
+workspace = true
 optional = true
 
 [dependencies.attohttpc]
-version = "0.24"
+workspace = true
 optional = true
 
 [dependencies.base64]
-version = "0.20"
+workspace = true
 optional = true
 
-[dependencies.chrono]
-version = "0.4"
-features = ["serde"]
-
 [dependencies.elephantry]
-version = "3.0"
+workspace = true
 optional = true
 features = ["date", "uuid"]
 
 [dependencies.feed-rs]
-version = "1.0"
+workspace = true
 optional = true
 
 [dependencies.log]
-version = "0.4"
+workspace = true
 optional = true
 
 [dependencies.opml]
-version = "1.0"
+workspace = true
 optional = true
 
 [dependencies.reqwest]
-version = "0.11"
+workspace = true
 optional = true
 
 [dependencies.serde]
-version = "1.0"
+workspace = true
 features = ["derive"]
 
 [dependencies.uuid]
