--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,7 +13,7 @@ actix-web-actors = "4.0"
 base64.workspace = true
 bigdecimal = "0.3"
 chrono.workspace = true
-dotenv = "0.15"
+dotenvy = "0.15"
 env_logger = "0.10"
 feed-rs.workspace = true
 futures-util = "0.3"
