--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,8 +13,8 @@ actix-web-actors = "4.0"
 base64.workspace = true
 bigdecimal = "0.3"
 chrono.workspace = true
-dotenvy = "0.15"
 env_logger = "0.10"
+envir.workspace = true
 feed-rs.workspace = true
 futures-util = "0.3"
 hmac.workspace = true
