--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ members = [
 [workspace.dependencies]
 actix-web = "4.0"
 base64 = "0.21"
+envir = "0.2"
 feed-rs = "1.0"
 http = "0.2"
 hmac = "0.12"
