--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [dependencies]
 chrono.workspace = true
+envir.workspace = true
 http.workspace = true
 jwt.workspace = true
 serde_json.workspace = true
