--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -28,7 +28,7 @@ serde.workspace = true
 serde_json.workspace = true
 sha2.workspace = true
 tree_magic_mini = "3.0"
-url = "2.2"
+url.workspace = true
 
 [dependencies.attohttpc]
 workspace = true
