--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ ring = "0.17.0-alpha.7"
 serde = "1.0"
 serde_json = "1.0"
 sha2 = "0.10"
+url = "2.2"
 uuid = "1.0"
 
 [workspace.dependencies.attohttpc]
