--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -11,6 +11,7 @@ envir.workspace = true
 jwt.workspace = true
 serde_json.workspace = true
 thiserror = "1.0"
+url.workspace = true
 
 [dependencies.actix-web]
 workspace = true
