--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -17,7 +17,6 @@ serde.workspace = true
 serde_json.workspace = true
 sha2.workspace = true
 urlencoding = "2.0"
-uuid.workspace = true
 wasm-bindgen = "0.2"
 wasm-cookies = "0.2"
 wasm-logger = "0.2"
@@ -45,6 +44,10 @@ path = "../common/"
 [dependencies.reqwest]
 workspace = true
 features = ["json"]
+
+[dependencies.uuid]
+workspace = true
+features = ["v4"]
 
 [dependencies.web-sys]
 version = "0.3"
