--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -7,7 +7,6 @@ license = "MIT"
 
 [dependencies]
 chrono.workspace = true
-envir.workspace = true
 jwt.workspace = true
 serde_json.workspace = true
 thiserror = "1.0"
@@ -24,6 +23,10 @@ optional = true
 [dependencies.base64]
 workspace = true
 optional = true
+
+[dependencies.envir]
+workspace = true
+default-features = false
 
 [dependencies.elephantry]
 workspace = true
