--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -13,6 +13,7 @@ actix-web-actors = "4.0"
 base64.workspace = true
 bigdecimal = "0.4"
 chrono.workspace = true
+elephantry-extras.workspace = true
 envir.workspace = true
 feed-rs.workspace = true
 futures-util = "0.3"
