--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [dependencies]
 chrono.workspace = true
+elephantry-extras.workspace = true
 jwt.workspace = true
 serde_json.workspace = true
 thiserror = "1.0"
@@ -32,6 +33,7 @@ default-features = false
 workspace = true
 optional = true
 features = ["date", "uuid"]
+
 
 [dependencies.feed-rs]
 workspace = true
