--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -25,8 +25,8 @@ yew-agent = "0.2"
 yew-router = "0.18"
 
 [dependencies.elephantry-extras]
-version = "0.5"
-features = ["yew-pager"]
+workspace = true
+features = ["serde", "yew-pager"]
 
 [dependencies.chrono-humanize]
 version = "0.2"
