--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ members = [
 [workspace.dependencies]
 actix-web = "4.0"
 base64 = "0.22"
-envir = "0.4"
 feed-rs = "2.0"
 hmac = "0.12"
 jwt = "0.16"
@@ -29,6 +28,10 @@ features = ["json"]
 [workspace.dependencies.chrono]
 version = "0.4"
 features = ["serde"]
+
+[workspace.dependencies.envir]
+version = "0.4"
+default-features = false
 
 [workspace.dependencies.elephantry]
 version = "4.0"
