--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 
 [dependencies]
 chrono.workspace = true
+envir.workspace = true
 elephantry-extras.workspace = true
 jwt.workspace = true
 serde_json.workspace = true
@@ -25,15 +26,10 @@ optional = true
 workspace = true
 optional = true
 
-[dependencies.envir]
-workspace = true
-default-features = false
-
 [dependencies.elephantry]
 workspace = true
 optional = true
 features = ["date", "uuid"]
-
 
 [dependencies.feed-rs]
 workspace = true
