--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -16,6 +16,7 @@ serde_json.workspace = true
 sha2.workspace = true
 urlencoding = "2.0"
 wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
 wasm-cookies = "0.2"
 wasm-logger = "0.2"
 wasm-sockets = "1.0"
