--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT"
 actix = "0.13"
 actix-cors = "0.7"
 actix-web.workspace = true
-actix-web-actors = "4.0"
+actix-ws = "0.3"
 base64.workspace = true
 bigdecimal = "0.4"
 chrono.workspace = true
