--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -49,7 +49,7 @@ features = ["v4"]
 
 [dependencies.web-sys]
 version = "0.3"
-features = ["HtmlDocument", "Performance", "Touch", "TouchEvent", "TouchList"]
+features = ["Document", "HtmlDocument", "Performance", "Touch", "TouchEvent", "TouchList", "VisibilityState"]
 
 [dependencies.yew]
 version = "0.21"
