Uses SSE instead of websocket

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,7 +9,6 @@ license = "MIT"
 actix = "0.13"
 actix-cors = "0.7"
 actix-web.workspace = true
-actix-ws = "0.3"
 base64.workspace = true
 bigdecimal = "0.4"
 chrono.workspace = true
@@ -19,6 +18,7 @@ futures-util = "0.3"
 hmac.workspace = true
 jwt.workspace = true
 log.workspace = true
+mime = "0.3.17"
 opml.workspace = true
 rayon = "1.5"
 ring.workspace = true
