Uses tinytemplate for RSS

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -26,6 +26,7 @@ scraper = "0.22"
 serde.workspace = true
 serde_json.workspace = true
 sha2.workspace = true
+tinytemplate = "1.2"
 tree_magic_mini = "3.0"
 url.workspace = true
 
