Enables js feature for uuid 1.13

--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -45,7 +45,7 @@ features = ["json"]
 
 [dependencies.uuid]
 workspace = true
-features = ["v4"]
+features = ["v4", "js"]
 
 [dependencies.web-sys]
 version = "0.3"
