Uses let chains

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ members = [
 ]
 resolver = "3"
 
+[workspace.package]
+rust-version = "1.88"
+
 [workspace.dependencies]
 actix-web = "4.0"
 base64 = "0.22"
