--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -22,6 +22,7 @@ log.workspace = true
 mime = "0.3.17"
 opml.workspace = true
 rayon = "1.5"
+regex.workspace = true
 scraper = "0.25"
 serde.workspace = true
 serde_json.workspace = true
