--- a/front/Cargo.toml
+++ b/front/Cargo.toml
@@ -10,7 +10,7 @@ futures = "0.3"
 gloo.workspace = true
 hmac.workspace = true
 jwt.workspace = true
-regex = "1.4"
+regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 sha2.workspace = true
